TF Course/12 Dynamic Block/Dynamic.tf
variable "sg_ports" {
    type        = list(number)
    description = "list of ingress ports"
    default     = [8200, 8201, 8300, 9200, 9500]    # ports that will be used
}

resource "aws_security_group" "dynamicsg" {
    name        = "dynamic-sg"
    description = "Ingress for vault"

    dynamic "ingress" {
        for_each = var.sg_ports                     # creates for each port in var.sg_ports
        iterator = port
        content {
          from_port   = port.value
          to_port     = port.value
          protocol    = "tcp"
          cidr_blocks = ["0.0.0.0/0"]
        }
    }
}
